@@ -33,7 +33,7 @@
   098df570908eec421a271133cd0556f5894cce65 2012073100 msys-bison.xml
   da2701ed54305ac41753fcc1d4cd8acbbf97ad64 2012073100 msys-bzip2.xml
   9fa0f6bc936b8fae418f79e38ecf31abb35ade20 2012073100 msys-console.xml
-  275ae3d299dca3198997a0083825c9698409f85e 2012073100 msys-core.xml
+  ddfeed199d4857e2d14d9ee73a96786f14a37d7d 2012112200 msys-core.xml
   82080d78dce4eca134aa22803a3364ff04d3607c 2012073100 msys-coreutils.xml
   0cae2a34f3da7edea476ecab29807727f033f4fa 2012073100 msys-crypt.xml
   b0972dbaf1906fa98f7f3502a0c4417a5edb4853 2012073100 msys-cvs.xml
