@@ -44,6 +44,7 @@
         <requires eq="msys-core-%-msys-%-doc.tar" />
         <requires eq="msys-core-%-msys-%-lic.tar" />
         <release tarname="msysCORE-1.0.17-1-msys-1.0.17-bin.tar.lzma" />
+        <release tarname="msysCORE-1.0.18-1-msys-1.0.18-bin.tar.lzma" />
       </component>
 
       <component class="ext">
@@ -51,6 +52,7 @@
          components other than msys-core-bin alone.
          -->
         <release tarname="msysCORE-1.0.17-1-msys-1.0.17-ext.tar.lzma" />
+        <release tarname="msysCORE-1.0.18-1-msys-1.0.18-ext.tar.lzma" />
         <requires eq="msys-bash-*-msys-*-bin.tar" />
         <requires eq="msys-core-%-msys-%-bin.tar" />
         <requires eq="msys-coreutils-*-msys-*-bin.tar" />
@@ -61,18 +63,22 @@
 
       <component class="dev">
         <release tarname="msysCORE-1.0.17-1-msys-1.0.17-dev.tar.lzma" />
+        <release tarname="msysCORE-1.0.18-1-msys-1.0.18-dev.tar.lzma" />
       </component>
 
       <component class="doc">
         <release tarname="msysCORE-1.0.17-1-msys-1.0.17-doc.tar.lzma" />
+        <release tarname="msysCORE-1.0.18-1-msys-1.0.18-doc.tar.lzma" />
       </component>
 
       <component class="lic">
         <release tarname="msysCORE-1.0.17-1-msys-1.0.17-lic.tar.lzma" />
+        <release tarname="msysCORE-1.0.18-1-msys-1.0.18-lic.tar.lzma" />
       </component>
 
       <component class="dbg">
         <release tarname="msysCORE-1.0.17-1-msys-1.0.17-dbg.tar.lzma" />
+        <release tarname="msysCORE-1.0.18-1-msys-1.0.18-dbg.tar.lzma" />
         <requires eq="msys-core-%-msys-%-bin.tar" />
       </component>
     </package>
